dinoco_docs/src/content/v0.1.0/pt-br/orm/find-first.md
# find_first

Usado para buscar no máximo um registro.

---

## O que você pode fazer

- `.select::&lt;T&gt;()`: troca a projeção padrão por uma projeção customizada.
- `.cond(...)`: adiciona filtros na busca.
- `.take(...)`: limita a quantidade máxima de registros considerados.
- `.skip(...)`: pula registros antes de selecionar o primeiro resultado.
- `.order_by(...)`: define qual registro deve ser considerado primeiro.
- `.includes(...)`: carrega relações junto com o item principal.
- `.count(...)`: calcula contadores de relações na projeção.
- `.cache(...)`: tenta buscar primeiro no Redis e só consulta o banco se a chave não existir. Em cache hit, o query logger registra `CACHE HIT key=...`.
- `.cache_with_expiration(...)`: faz o mesmo fluxo, mas salva com TTL em segundos.
- `.read_in_primary()`: força a leitura no banco principal.
- `.execute(&client)`: executa a consulta e retorna no máximo um item.

## Retorno

Sem `select::&lt;T&gt;()`, o retorno é:

```rust
DinocoResult<Option<M>>
```

Com `select::&lt;T&gt;()`, o retorno passa a ser:

```rust
DinocoResult<Option<T>>
```

## Exemplo básico

```rust
let user = dinoco::find_first::<User>()
    .cond(|w| w.id.eq(10))
    .execute(&client)
    .await?;
```

## Exemplo com select

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserSummary {
    id: i64,
    name: String,
}

let user = dinoco::find_first::<User>()
    .select::<UserSummary>()
    .cond(|w| w.id.eq(1_i64))
    .execute(&client)
    .await?;
```

## Exemplo com relação

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let user = dinoco::find_first::<User>()
    .select::<UserWithPosts>()
    .cond(|x| x.id.eq(1_i64))
    .includes(|x| x.posts())
    .execute(&client)
    .await?;
```

## Exemplo com count de relação

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPostsCount {
    id: i64,
    name: String,
    posts_count: usize,
}

let user = dinoco::find_first::<User>()
    .select::<UserWithPostsCount>()
    .cond(|x| x.id.eq(1_i64))
    .count(|x| x.posts().cond(|post| post.state.eq(PostStatus::Active)))
    .execute(&client)
    .await?;
```

O count respeita o item retornado e a condição da relação. Ele preenche `posts_count` com a quantidade de posts ativos daquele usuário, sem carregar `posts`.

## Exemplo com ordenação

```rust
let latest_user = dinoco::find_first::<User>()
    .order_by(|x| x.id.desc())
    .execute(&client)
    .await?;
```

## Exemplo com worker

```rust
use database::*;

let _worker = workers()
    .on::<User, _, _>("user.first-read", |job| async move {
        println!("Primeiro usuário lido: {}", job.data.name);
        job.success();
    })
    .run()
    .await?;

let user = dinoco::find_first::<User>()
    .order_by(|x| x.id.desc())
    .enqueue("user.first-read")
    .execute(&client)
    .await?;
```

Veja mais sobre workers em [**`queues`**](/v0.1.0/orm/queues).

## Exemplo com cache

Esse método só existe quando o schema tiver `redis` configurado.

```rust
use database::*;

let user = dinoco::find_first::<User>()
    .cond(|x| x.id.eq(1_i64))
    .cache("users:1")
    .execute(&client)
    .await?;
```

## Exemplo com cache

Esse método só existe quando o schema tiver `redis` configurado.

```rust
use database::*;

let user = dinoco::find_first::<User>()
    .cond(|x| x.id.eq(1_i64))
    .cache_with_expiration("users:1")
    .execute(&client)
    .await?;
```

## Próximos passos

- [**`find_many::&lt;M&gt;()`**](/v0.1.0/orm/find-many): busca múltiplos registros.
- [**`count::&lt;M&gt;()`**](/v0.1.0/orm/count): contagem de registros.
